--- a/curseforge.html
+++ b/curseforge.html
@@ -1,54 +1,46 @@
-<p style="text-align:center;">
-	<img alt="Mubble" width="1344" src="https://dawnteammc.github.io/mubble/images/header.png"/>
-</p>
+<p style="text-align:center;"><a href="https://dawnteammc.github.io/mubble" rel="nofollow"><img alt="Promenade" width="1344" src="https://dawnteammc.github.io/mubble/images/header.png"/></a></p>
 
 <p style="text-align:center">
-	<a href="https://curseforge.com/minecraft/mc-mods/dawn" rel="nofollow"><img src="https://tinyurl.com/ycxtebsr" alt="Requires Dawn API"></a>
-	<a href="https://discord.gg/8ksTVJu" rel="nofollow"><img src="https://img.shields.io/discord/504608980799062036?label=&color=C06D00&labelColor=DF8700&style=for-the-badge&logo=Discord&logoColor=DDE4EF" alt="Dawn Team Discord"></a>
-	<a href="https://twitter.com/DawnTeamMC" rel="nofollow"><img src="https://img.shields.io/twitter/follow/DawnTeamMC?label=&color=C06D00&labelColor=DF8700&style=for-the-badge&logo=Twitter&logoColor=DDE4EF" alt="Dawn Team Twitter"></a>
-	<a href="https://crowdin.com/project/dawnteam" rel="nofollow"><img src="https://img.shields.io/static/v1?label=&message=Translations&color=C06D00&labelColor=DF8700&style=for-the-badge&logo=Crowdin&logoColor=DDE4EF" alt="Dawn Team Crowdin"></a>
+	<a href="https://discord.gg/8ksTVJu" rel="nofollow"><img src="https://img.shields.io/discord/504608980799062036?label=&color=424549&labelColor=7289da&style=for-the-badge&logo=Discord&logoColor=DDE4EF" alt="Dawn Team Discord"></a>
+	<a href="https://twitter.com/DawnTeamMC" rel="nofollow"><img src="https://img.shields.io/twitter/follow/DawnTeamMC?label=&color=424549&labelColor=1DA1F2&style=for-the-badge&logo=Twitter&logoColor=DDE4EF" alt="Dawn Team Twitter"></a>
 </p>
 
-<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/images/break_bar.png"/></p>
+<p>Mubble is a mod for Minecraft 1.16 that adds a ton of features to the game related to pop culture. It is the ultimate crossover mod for Minecraft, but is mainly focused on Nintendo content.</p>
+<p style="color: #ff0000;"><strong>⚠ Mubble is outdated and will be split into multiple mods for each pop culture universe in 2022. ⚠</strong><p>
 
-<p style="font-size:18px"><strong>📖 About</strong></p>
-<p style="font-size:14px">Mubble brings Nintendo and some gaming franchises to your world. Super Mario, Tetris, Castlevania, Celeste, Sonic, Pokémon, and way more universes await.</p>
+<p><strong>You can visit the <a href="https://dawnteammc.github.io/mubble">official website for Mubble for more information</a>.</strong><p>
 
-<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/images/break_bar.png"/></p>
+<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/mubble/images/break.png"/></p>
 
-<p style="font-size:18px"><strong>🍄 Features</strong></p>
+<h2>👾 Features</h2>
 <ul>
-	<li><span style="font-size:14px">Super Mario Maker 2 content, such as ? blocks, empty blocks, ground blocks, brick blocks, note blocks, doors, key doors and way more!</span></li>
-	<li><span style="font-size:14px">Flowers from Super Mario</span></li>
-	<li><span style="font-size:14px">Tetris blocks</span></li>
-	<li><span style="font-size:14px">Vampire stone, Medusa's stone and bricks from Castlevania</span></li>
-	<li><span style="font-size:14px">Sonic blocks, such as green hill grass and springs</span></li>
-	<li><span style="font-size:14px">Press garden from Sonic</span></li>
-	<li><span style="font-size:14px">Scarlet forest from Deltarune</span></li>
-	<li><span style="font-size:14px">Puyos</span></li>
-	<li><span style="font-size:14px">Virtual googles that alter your vision with a retro style</span></li>
-	<li><span style="font-size:14px">Caps and crown costumes from Super Mario</span></li>
-	<li><span style="font-size:14px">Many other costumes from different franchises</span></li>
-	<li><span style="font-size:14px">Toads and Goombas</span></li>
-	<li><span style="font-size:14px">The fireball and iceball from Super Mario</span></li>
-	<li><span style="font-size:14px">Coins from Super Mario</span></li>
-	<li><span style="font-size:14px">Lightsabers from Star Wars</span></li>
+	<li>Super Mario Maker 2 content, such as ? blocks, empty blocks, ground blocks, brick blocks, note blocks, doors, key doors and way more!</li>
+	<li>Flowers from Super Mario</li>
+	<li>Tetris blocks</li>
+	<li>Vampire stone, Medusa's stone and bricks from Castlevania</li>
+	<li>Sonic blocks, such as green hill grass and springs</li>
+	<li>Press garden from Sonic</li>
+	<li>Scarlet forest from Deltarune</li>
+	<li>Puyos</li>
+	<li>Virtual googles that alter your vision with a retro style</li>
+	<li>Caps and crown costumes from Super Mario</li>
+	<li>Many other costumes from different franchises</li>
+	<li>Toads and Goombas</li>
+	<li>The fireball and iceball from Super Mario</li>
+	<li>Coins from Super Mario</li>
+	<li>Lightsabers from Star Wars</li>
 </ul>
 
-<p style="font-size:16px"><strong>More information and screenshots of all the added features can be found on the <a href="https://github.com/DawnTeamMC/Mubble/wiki"><span style="font-size:16px">Wiki</span></a></strong><br></p>
+<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/mubble/images/break.png"/></p>
 
-<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/images/break_bar.png"/></p>
-
-<p><span style="font-size:18px"><strong>🎮 Our Mods</strong></span></p>
+<h2>🎮 Our Mods</h2>
 <p style="text-align:center">
 	<a href="https://www.curseforge.com/minecraft/mc-mods/promenade"><img alt="Promenade" width="250" src="https://dawnteammc.github.io/promenade/images/header_small.png"></a><br><br>
 	<a href="https://www.curseforge.com/minecraft/mc-mods/culinaire"><img alt="Culinaire" width="250" src="https://dawnteammc.github.io/culinaire/images/header_small.png"></a><br><br>
 	<a href="https://www.curseforge.com/minecraft/mc-mods/artisanat"><img alt="Artisanat" width="250" src="https://dawnteammc.github.io/artisanat/images/header_small.png"></a><br><br>
-	<a href="https://www.curseforge.com/minecraft/mc-mods/mubble"><img alt="Mubble" width="250" src="https://dawnteammc.github.io/mubble/images/header_small.png"></a><br><br>
+	<img alt="Mubble" width="250" src="https://dawnteammc.github.io/mubble/images/header_small.png"><br><br>
 	<a href="https://www.curseforge.com/minecraft/mc-mods/universal-ores-fabric"><img alt="Universal Ores" width="250" src="https://dawnteammc.github.io/universal_ores/images/header_small.png"></a>
 </p>
-
-<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/images/break_bar.png"/></p>
 
 <p style="font-size:12px; text-align:center">Mubble is made for Fabric, and currently not for newer versions of Forge.</p>
 <p style="font-size:12px; text-align:center">However, <a href="https://www.curseforge.com/minecraft/mc-mods/mubble-forge">an outdated version for Forge</a> exists (it has WAY less features).</p>
