--- a/curseforge.html
+++ b/curseforge.html
@@ -5,30 +5,23 @@
 	<a href="https://twitter.com/DawnTeamMC" rel="nofollow"><img src="https://img.shields.io/twitter/follow/DawnTeamMC?label=&color=424549&labelColor=1DA1F2&style=for-the-badge&logo=Twitter&logoColor=DDE4EF" alt="Dawn Team Twitter"></a>
 </p>
 
-<p>Mubble is a mod for Minecraft 1.16 that adds a ton of features to the game related to pop culture. It is the ultimate crossover mod for Minecraft, but is mainly focused on Nintendo content.</p>
-<p style="color: #ff0000;"><strong>⚠ Mubble is outdated and will be split into multiple mods for each pop culture universe in 2022. ⚠</strong><p>
+<p>Mubble is a mod for the latest version of Minecraft that adds a ton of features to the game related to pop culture. It is the ultimate crossover mod, mainly focusing on Nintendo licenses.</p>
 
 <p><strong>You can visit the <a href="https://dawnteammc.github.io/mubble">official website for Mubble for more information</a>.</strong><p>
 
 <p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/mubble/images/break.png"/></p>
 
 <h2>👾 Features</h2>
+<p>Work in progress!</p>
+
+<p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/mubble/images/break.png"/></p>
+
+<h2>📦 Download</h2>
+<h3>Required mods</h3>
+<p>⚠ Mubble <strong>needs</strong> the following mods to be installed:</p>
 <ul>
-	<li>Super Mario Maker 2 content, such as ? blocks, empty blocks, ground blocks, brick blocks, note blocks, doors, key doors and way more!</li>
-	<li>Flowers from Super Mario</li>
-	<li>Tetris blocks</li>
-	<li>Vampire stone, Medusa's stone and bricks from Castlevania</li>
-	<li>Sonic blocks, such as green hill grass and springs</li>
-	<li>Press garden from Sonic</li>
-	<li>Scarlet forest from Deltarune</li>
-	<li>Puyos</li>
-	<li>Virtual googles that alter your vision with a retro style</li>
-	<li>Caps and crown costumes from Super Mario</li>
-	<li>Many other costumes from different franchises</li>
-	<li>Toads and Goombas</li>
-	<li>The fireball and iceball from Super Mario</li>
-	<li>Coins from Super Mario</li>
-	<li>Lightsabers from Star Wars</li>
+	<li>Fabric API: <a href="https://github.com/FabricMC/fabric">GitHub</a> / <a href="https://www.curseforge.com/minecraft/mc-mods/fabric-api">CurseForge</a> / <a href="https://modrinth.com/mod/fabric-api">Modrinth</a></li>
+	<li>Dawn API: <a href="https://github.com/DawnTeamMC/DawnAPI">GitHub</a> / <a href="https://www.curseforge.com/minecraft/mc-mods/dawn">CurseForge</a> / <a href="https://modrinth.com/mod/dawn">Modrinth</a></li>
 </ul>
 
 <p style="text-align:center;"><img width="1344" src="https://dawnteammc.github.io/mubble/images/break.png"/></p>
